--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
+<! -- This links the CSS file -->
+<link rel="stylesheet" href="style.css">
 
 <h1>Cash Compass Website</h1>
 
