Finished up the basic example
Created the javascript file functions.js.
Added code to connect the three files, as well as provided examples on how to call from each file.

--- a/index.htm
+++ b/index.htm
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<! -- This links the Javascript file -->
+	<script type = "text/javascript" src="functions.js"></script>
+
+	<! -- This links the CSS file -->
+	<link rel="stylesheet" href="style.css">
+
+<head>
 <body>
-<! -- This links the CSS file -->
-<link rel="stylesheet" href="style.css">
 
 <h1>Cash Compass Website</h1>
 
-<p>This is a placeholder paragraph.</p>
-<p>Beans beans beans beans beans.</p>
 
+<p>Take control of your finances with CashCompass. Our AI-driven app simplifies money management by effortlessly tracking your daily expenses and categorizing them automatically.</p>
+
+<!-- Function call from the javascript -->
+<button onclick="changeColor()">Change color</button>
+<div id="my-div"></div>
 
 </body>
 </html>
