Created User Object
Created the user object in the javascript file.
Check the bottom of the file to see how I printed the name by calling the function.

--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,7 @@
 <body>
 	<div>
 	<h1 id="h1">Cash Compass Website</h1>
+		<p> Current User: <p> <p id ="username_html"><p>
 
 	<p>Take control of your finances with CashCompass.
 		Our AI-driven app simplifies money management
