--- a/index.htm
+++ b/index.htm
@@ -35,8 +35,9 @@
 			<input type="number" id="percentage" min="0" max="100" required>
 			<label for="income">Income:</label>
 			<input type="number" id="income" required>
-			<!-- Add Data button -->
-			<button type="button" onclick="addData()">Generate</button>
+			<label for="expense">Expense:</label>
+			<input type="number" id="expense">
+			<button onclick="expendituresButton()">Submit</button>
 		</form>
 		<!-- Canvas for the pie chart -->
 		<canvas id="pieChart" width="400" height="400"></canvas>
