--- a/index.htm
+++ b/index.htm
@@ -35,6 +35,7 @@
 			<input type="number" id="percentage" min="0" max="100" required>
 			<label for="income">Income:</label>
 			<input type="number" id="income" required>
+			<button onclick="incomeButton()">Submit</button>
 			<label for="expense">Expense:</label>
 			<input type="number" id="expense">
 			<button onclick="expendituresButton()">Submit</button>
