--- a/index.htm
+++ b/index.htm
@@ -35,10 +35,12 @@
 			<input type="number" id="percentage" min="0" max="100" required>
 			<label for="income">Income:</label>
 			<input type="number" id="income" required>
-			<button onclick="incomeButton()">Submit</button>
 			<label for="expense">Expense:</label>
 			<input type="number" id="expense">
-			<button onclick="expendituresButton()">Submit</button>
+			<div class="button-container">
+				<button onclick="incomeButton()">Submit</button>
+				<button onclick="expendituresButton()">Submit</button>
+			</div>
 		</form>
 		<!-- Canvas for the pie chart -->
 		<canvas id="pieChart" width="400" height="400"></canvas>
