--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    
 
 <head>
 <body>
@@ -25,6 +26,8 @@
 		by effortlessly tracking your daily expenses and
 		categorizing them automatically.
 	</p>
+	<!-- created this to test the output of the javascript functions -->
+	<p id="testOutput">Test</p>
 	</div>
 
 	<!--Creates a data form for user input-->
@@ -32,13 +35,15 @@
 		<form id="dataForm">
 			<!-- Input fields for data -->
 			<label for="percentage">Percentage:</label>
-			<input type="number" id="percentage" min="0" max="100" required>
+			<input type="number" id="percentage" min="0" max="100" >
 			<label for="income">Income:</label>
-			<input type="number" id="income" required>
-			<button onclick="incomeButton()">Submit</button>
+			<input type="number" id="income" >
+			<!-- Added onSubmit="return false" to stop the website from refreshing every time the button is pressed -->
+			<!-- The type="button" stops the page from refreshing every time. The default type is "forum" which does not work. -->
+			<button onclick="incomeButton()" onsubmit="return false" type="button">Submit</button>
 			<label for="expense">Expense:</label>
 			<input type="number" id="expense">
-			<button onclick="expendituresButton()">Submit</button>
+			<button onclick="expendituresButton()" type="button">Submit</button>
 			
 			<!--Categories drop down box-->
 			<label for="category">Categories:</label>
@@ -54,6 +59,7 @@
 		<!-- Canvas for the pie chart 1 and 2 -->
 		<canvas id="pieChart1" width="400" height="400"></canvas>
 		<canvas id="pieChart2" width="400" height="400"></canvas>
+		
 	</div>
 
 	<!-- JavaScript File-->
