--- a/index.htm
+++ b/index.htm
@@ -1,64 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<!--THIS ADDS THE TITILE TO TOP TAB-->
-	<title>CashCompass</title>
-	
-	<! -- This links the Javascript file -->
-	<script type = "text/javascript" src="functions.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CashCompass</title>
 
-	<! -- This links the CSS file -->
-	<link rel="stylesheet" href="style.css">
+	<!-- This links the JavaScript file -->
+	<script type="text/javascript" src="functions.js"></script>
 
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <!-- Link to external CSS -->
+    <link rel="stylesheet" href="style.css">
 
-<head>
+    <!-- Favicon for modern design -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    
+    <!-- Google Fonts for modern typography -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
+
 <body>
-	<div>
-	<h1 id="h1">Cash Compass Website</h1>
-		<p> Current User: <p> <p id ="username_html"><p>
+    <header>
+        <h1 id="h1">Cash Compass</h1>
+        <p id="username_html">Current User: </p>
+    </header>
 
-	<p>Take control of your finances with CashCompass.
-		Our AI-driven app simplifies money management
-		by effortlessly tracking your daily expenses and
-		categorizing them automatically.
-	</p>
-	</div>
+    <main>
+        <section class="intro">
+            <p>Take control of your finances with CashCompass. Our AI-driven app simplifies money management by effortlessly tracking your daily expenses and categorizing them automatically.</p>
+        </section>
 
-	<!--Creates a data form for user input-->
-	<div class="button-container">
-		<form id="dataForm">
-			<!-- Input fields for data -->
-			<label for="percentage">Percentage:</label>
-			<input type="number" id="percentage" min="0" max="100" required>
-			<label for="income">Income:</label>
-			<input type="number" id="income" required>
-			<button onclick="incomeButton()">Submit</button>
-			<label for="expense">Expense:</label>
-			<input type="number" id="expense">
-			<button onclick="expendituresButton()">Submit</button>
-			
-			<!--Categories drop down box-->
-			<label for="category">Categories:</label>
-			<select name="category" id="category" style="font-size: x-large;">
-				<option value="dash">----</option>
-				<option value="savings">Savings</option>
-				<option value="leisure">Leisure</option>
-				<option value="expenses">Expenses</option>
-				<option value="other">Other</option>
+        <section class="form-section">
+            <form id="dataForm">
+                <div class="form-group">
+                    <label for="percentage">Percentage:</label>
+                    <input type="number" id="percentage" min="0" max="100" required>
+                </div>
 
-			</select>
-		</form>
-		<!-- Canvas for the pie chart 1 and 2 -->
-		<canvas id="pieChart1" width="400" height="400"></canvas>
-		<canvas id="pieChart2" width="400" height="400"></canvas>
-	</div>
+                <div class="form-group">
+                    <label for="income">Income:</label>
+                    <input type="number" id="income" required>
+                </div>
 
-	<!-- JavaScript File-->
-	<script src="user.js"></script>
+                <button class="submit-button" onclick="incomeButton()">Submit</button>
 
+                <div class="form-group">
+                    <label for="expense">Expense:</label>
+                    <input type="number" id="expense">
+                </div>
+
+                <button class="submit-button" onclick="expendituresButton()">Submit</button>
+
+                <div class="form-group">
+                    <label for="category">Categories:</label>
+                    <select name="category" id="category">
+                        <option value="dash">----</option>
+                        <option value="savings">Savings</option>
+                        <option value="leisure">Leisure</option>
+                        <option value="expenses">Expenses</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+            </form>
+
+            <canvas id="pieChart1" width="400" height="400"></canvas>
+            <canvas id="pieChart2" width="400" height="400"></canvas>
+        </section>
+    </main>
+
+    <script src="user.js"></script>
 </body>
-
 </html>
