--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,13 @@
     <header>
         <h1 id="h1">Cash Compass</h1>
         <p id="username_html">Current User: </p>
+
+        <div class="login-button-container">
+            <form action="login.htm">
+                <button type="submit" class="login-button">Login</button>
+                <button type="submit" class="createUser-button">Create User</button>
+            </form>
+        </div>
     </header>
 
     <main>
@@ -66,7 +73,6 @@
             <canvas id="pieChart2" width="400" height="400"></canvas>
         </section>
     </main>
-
     <script src="user.js"></script>
 </body>
 </html>
