--- a/transactions.htm
+++ b/transactions.htm
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transactions History Page</title>
+    <title>Transactions</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="functions.js"></script>
 </head>
 <body>
-    <h1>Transactions History</h1>
-    <p>View your transaction history here.</p>
+    <header>
+        <h1>Transactions</h1>
+        <!-- Add a button to go back to the home page or user page -->
+        <a href="index.htm">
+            <button class="back-button">Back to Home</button>
+        </a>
+    </header>
+
+    <main>
+        <section class="transactions-section">
+            <h2>Transaction History</h2>
+            <p>Here you can view your past transactions</p>
+            <!-- Add your transaction details here -->
+        </section>
+    </main>
 </body>
 </html>
