--- a/login.htm
+++ b/login.htm
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="functions.js"></script>
 </head>
 <body>
     <h1>Login</h1>
-    <p>Enter your login details here.</p>
+    <form id="login-form">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" required>
+        </div>
+        <button type="button" onclick="login()">Login</button>
+    </form>
 </body>
 </html>
