--- a/index.htm
+++ b/index.htm
@@ -7,12 +7,11 @@
 
 	<!-- This links the JavaScript file -->
 	<script type="text/javascript" src="functions.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="piechart.js"></script>
 
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="style.css">
-
-    <!-- Favicon for modern design -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
     
     <!-- Google Fonts for modern typography -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -59,9 +58,8 @@
 
         <section class="pie-chart-section">
             <h3>Pie Chart</h3>
-            <div class="pie-chart-placeholder">
-                <p>Pie Chart Blank</p>
-            </div>
+            <canvas id="myPieChart" width="400" height="400"></canvas>
+            
         </section>
     </main>
 
