Adjusted createUser button background a couple pixels.
I adjusted the createUser button a couple pixels in the code, and added a few comments while I was trying to debug the Open Login button not having the same border.

--- a/index.htm
+++ b/index.htm
@@ -130,8 +130,8 @@
             </form>
         </div>
     </div>
-
-    <button id="open-popup-btn" onclick="openPopup()">Open Login</button>
+    
+    <button id="open-popup-btn" onclick="openPopup()">Open Login</button> <!-- Changed button id to button type, added class-->
 
     <!-- This links the JavaScript file -->
     <script type="text/javascript" src="functions.js"></script>
