--- a/index.htm
+++ b/index.htm
@@ -131,7 +131,7 @@
         </div>
     </div>
     
-    <button id="open-popup-btn" onclick="openPopup()">Open Login</button> <!-- Changed button id to button type, added class-->
+    <button id="open-popup-btn" class="login-button" onclick="openPopup()">Open Login</button> <!-- Changed button id to button type, added class-->
 
     <!-- This links the JavaScript file -->
     <script type="text/javascript" src="functions.js"></script>
