--- a/index.htm
+++ b/index.htm
@@ -87,19 +87,34 @@
                 <input type="number" id="left-income" placeholder="Enter Income" />
             </div>
             <div class="form-group">
-                <label for="income2">Type:</label>
-                <input type="string" id="type-income" placeholder="Enter type" />
-            </div>
+    <label for="type-income">Type:</label>
+    <select id="type-income">
+        <option value="" disabled selected>Select type</option>
+        <option value="Work">Work</option>
+        <option value="Other">Other</option>
+
+    </select>
+</div>
+
             <button class="submitIncome-button" onclick="incomeButton()">Submit Income</button>
             
             <div class="form-group">
                 <label for="expenses">Expenses:</label>
                 <input type="number" id="left-expenses" placeholder="Enter expenses" />
             </div>
-            <div class="form-group">
-                <label for="expenses2">Type:</label>
-                <input type="string" id="type-expenses" placeholder="Enter type" />
-            </div>
+<div class="form-group">
+    <label for="type-expenses">Type:</label>
+    <select id="type-expenses">
+        <option value="" disabled selected>Select type</option>
+        <option value="Food">Food</option>
+        <option value="Bills">Bills</option>
+        <option value="Gas">Gas</option>
+        <option value="School">School</option>
+        <option value="Leisure">Leisure</option>
+        <option value="Other">Other</option>
+    </select>
+</div>
+
 
             <button class="submitExpenses-button" onclick="expendituresButton()">Submit Expenses</button>
         </section>
