--- a/index.htm
+++ b/index.htm
@@ -80,6 +80,18 @@
                     </table>
                 </div>
             </div>
+            <!-- Trends Table-->
+            <section class="current-trends-section">
+                <h3> Trends </h3>
+                <div class="trends"> 
+                    <table>
+                        <tr> 
+                            <th>Type</th>
+                            <th>Frequency</th>
+                        </tr>
+                    </table>
+                </div>
+             </section>
         </section>
 
         <section class="left-section">
