added Trends funciton

--- a/index.htm
+++ b/index.htm
@@ -89,6 +89,30 @@
                             <th>Type</th>
                             <th>Frequency</th>
                         </tr>
+                        <tr>
+                            <td>Food</td>
+                            <td id="food-count"></td>
+                        </tr>
+                        <tr>
+                            <td>Bills</td>
+                            <td id="bills-count"></td>
+                        </tr>
+                        <tr>
+                            <td>Gas</td>
+                            <td id="gas-count"></td>
+                        </tr>
+                        <tr>
+                            <td>School</td>
+                            <td id="school-count"></td>
+                        </tr>
+                        <tr>
+                            <td>Leisure</td>
+                            <td id="leisure-count"></td>
+                        </tr>
+                        <tr>
+                            <td>Other</td>
+                            <td id="other-count"></td>
+                        </tr>
                     </table>
                 </div>
              </section>
